--- a/css/Fichier.css
+++ b/css/Fichier.css
@@ -6,7 +6,7 @@
   width: 100%;
 }
 @media screen and (max-width: 380 px) {
-	.format-smartphone {
+	.format-ordi {
 		display: flex;
 		justify-content: center;
 		align-items: center;
