--- a/css/Fichier.css
+++ b/css/Fichier.css
@@ -697,7 +697,7 @@ margin-top: 126px;
 }
 
 @media screen and (max-width: 380 px) {
-	.artiste {
+	.format-ordi {
 		display: flex;
 		justify-content: center;
 		align-items: center;
