--- a/css/Fichier.css
+++ b/css/Fichier.css
@@ -696,7 +696,7 @@ margin-top: 126px;
   line-height: normal;
 }
 
-.format-ordi .loupe:hover {
+.format-ordi .nolan-et-nola:hover {
 	transition: all 0.3s ease 0s;
 }
 
